--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
 					<!-- Tab panes -->
 					<div class="tab-content">
 						<div class="tab-pane active" id="Login">
-							<form role="form" class="form-horizontal">
+							<form role="form" action="//cpanel.ar05.eu.org/login.php" class="form-horizontal">
 							<div class="form-group">
 								<div class="col-sm-12">
-									<input class="form-control" id="email1" placeholder="Name" type="text">
+									<input class="form-control" id="email1" placeholder="Name" type="username">
 								</div>
 							</div>
 							<div class="form-group">
 								<div class="col-sm-12">
-									<input class="form-control" id="exampleInputPassword1" placeholder="Email" type="email">
+									<input class="form-control" id="exampleInputPassword1" placeholder="Email" type="password">
 								</div>
 							</div>
 							<div class="row">
