--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
 							<form role="form" action="//cpanel.ar05.eu.org/login.php" class="form-horizontal">
 							<div class="form-group">
 								<div class="col-sm-12">
-									<input class="form-control" id="email1" placeholder="Name" type="username">
+									<input class="form-control" id="email1" placeholder="Username" type="username">
 								</div>
 							</div>
 							<div class="form-group">
 								<div class="col-sm-12">
-									<input class="form-control" id="exampleInputPassword1" placeholder="Email" type="password">
+									<input class="form-control" id="exampleInputPassword1" placeholder="Password" type="password">
 								</div>
 							</div>
 							<div class="row">
