--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
 							<form role="form" action="//cpanel.ar05.eu.org/login.php" class="form-horizontal">
 							<div class="form-group">
 								<div class="col-sm-12">
-									<input class="form-control" id="email1" placeholder="Username" type="username">
+									<input class="form-control" id="email1" placeholder="Username" type="text" name="uname">
 								</div>
 							</div>
 							<div class="form-group">
 								<div class="col-sm-12">
-									<input class="form-control" id="exampleInputPassword1" placeholder="Password" type="password">
+									<input class="form-control" id="exampleInputPassword1" placeholder="Password" type="password" name="passwd">
 								</div>
 							</div>
 							<div class="row">
@@ -76,7 +76,7 @@
 									<button type="submit" class="btn btn-light btn-radius btn-brd grd1">
 										Submit
 									</button>
-									<a class="for-pwd" href="javascript:;">Forgot your password?</a>
+									<a class="for-pwd" href="//cpanel.ar05.eu.org/lostpassword.php">Forgot your password?</a>
 								</div>
 							</div>
 							</form>
