--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	  <div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header tit-up">
-				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+				<button href="https://cpanel.ar05.eu.org" type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 				<h4 class="modal-title" href="https://cpanel.ar05.eu.org">Customer Login</h4>
 			</div>
 			<div class="modal-body customer-box row">
