--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 				<div class="col-md-12">
 					<!-- Nav tabs -->
 					<ul class="nav nav-tabs">
-						<li class="active"><a href="https://cpanel.ar05.eu.org" data-toggle="tab">Login</a></li>
-						<li><a href="#pricing" data-toggle="tab">Registration</a></li>
+						<li class="active"><a href="https://cpanel.ar05.eu.org">Login</a></li>
+						<li><a href="#pricing">Registration</a></li>
 					</ul>
 	<!-- Tab panes -->
 					
