--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a class="active" href="index.html">Home</a></li>
+                        <li><a class="active" href="/">Home</a></li>
                         <li><a href="features.html">Features </a></li>
                         <li><a href="domain.html">Domain</a></li>
                         <li><a href="hosting.html">Hosting</a></li>
