--- a/index.html
+++ b/index.html
@@ -771,12 +771,12 @@
                             <h3>Information Link</h3>
                         </div>
                         <ul class="footer-links">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Pricing</a></li>
-							<li><a href="#">About</a></li>
-							<li><a href="#">Faq</a></li>
-							<li><a href="#">Contact</a></li>
+                            <li><a href="/">Home</a></li>
+                            <li><a href="hosting.html">Hosting</a></li>
+                            <li><a href="domain.html">Domain</a></li>
+							<li><a href="testimonials.html">Testimoni</a></li>
+							<li><a href="features.html">Features</a></li>
+							<li><a href="contact.html">Contact</a></li>
                         </ul><!-- end links -->
                     </div><!-- end clearfix -->
                 </div><!-- end col -->
@@ -788,10 +788,9 @@
                         </div>
 
                         <ul class="footer-links">
-                            <li><a href="mailto:#">info@yoursite.com</a></li>
-                            <li><a href="#">www.yoursite.com</a></li>
-                            <li>PO Box 16122 Collins Street West Victoria 8007 Australia</li>
-                            <li>+61 3 8376 6284</li>
+                            <li><a href="mailto:contact@ar05hosting.eu.org">contact@ar05hosting.eu.org</a></li>
+                            <li><a href="https://ar05hosting.eu.org">ar05hosting.eu.org</a></li>
+                            <li>Garut, Jawa Barat, Indonesia</li>
                         </ul><!-- end links -->
                     </div><!-- end clearfix -->
                 </div><!-- end col -->
@@ -818,7 +817,7 @@
         <div class="container">
             <div class="footer-distributed">
                 <div class="footer-left">                   
-                    <p class="footer-company-name">All Rights Reserved. &copy; 2018 <a href="#">HostCloud</a> Design By : <a href="https://html.design/">html design</a></p>
+                    <p class="footer-company-name">All Rights Reserved. &copy; 2021 <a href="#">AR05 Hosting</a></p>
                 </div>
 
                 <div class="footer-right">
