--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="widget clearfix">
                         <div class="widget-title">
-                            <img src="images/logos/logo-hosting-light.png" alt="">
+                            <img src="1638102225564.jpg" alt="">
                             <small>Web Hosting Template</small>
                         </div>
                         <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis montes.</p>
