--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
 							<div class="col-md-12 col-sm-12 text-center">
 								<div class="big-tagline">
 									<img src="1638102225564.png" alt="image">
-									<h2 data-animation="animated zoomInRight">Best <strong>Shared Hosting</strong> Company</h2>
-									<p class="lead" data-animation="animated fadeInLeft">With Landigoo responsive landing page template, you can promote your all hosting, domain and email services. </p>
+									<h2 data-animation="animated zoomInRight">Best <strong>Shared Hosting</strong></h2>
+									<p class="lead" data-animation="animated fadeInLeft">Dapatkan Shared Hosting Terbaik Secara Gratis Dengan Fitur Lengkap Dan Tersedia Softaculous Untuk Menginstal CMS</p>
 									 <a data-scroll href="#pricing" class="btn btn-light btn-radius btn-brd effect-1 slide-btn" data-animation="animated fadeInLeft">View Plans</a>
 									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 									<a data-scroll href="#overviews" class="btn btn-light btn-radius btn-brd effect-1 slide-btn" data-animation="animated fadeInRight">All Features</a>
@@ -132,8 +132,8 @@
 							<div class="col-md-12 col-sm-12 text-center">
 								<div class="big-tagline">
 									<img src="1638102225564.png" alt="image">
-									<h2 data-animation="animated zoomInRight">Find the right <strong>Hosting</strong></h2>
-									<p class="lead" data-animation="animated fadeInLeft">With Landigoo responsive landing page template, you can promote your all hosting, domain and email services. </p>
+									<h2 data-animation="animated zoomInRight">Hosting <strong>No Ads</strong></h2>
+									<p class="lead" data-animation="animated fadeInLeft">Coba Sekarang Juga Hosting Gratis Tanpa Iklan Yang Membuat Anda Semakin Nyaman Dalam Mengelola Website</p>
 									 <a data-scroll href="#pricing" class="btn btn-light btn-radius btn-brd effect-1 slide-btn" data-animation="animated fadeInLeft">View Plans</a>
 									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 									<a data-scroll href="#overviews" class="btn btn-light btn-radius btn-brd effect-1 slide-btn" data-animation="animated fadeInRight">All Features</a>
@@ -150,10 +150,8 @@
 							<div class="col-md-12 col-sm-12 text-center">
 								<div class="big-tagline">
 									<img src="1638102225564.png" alt="image">
-									<h2 data-animation="animated zoomInRight">Best <strong>VPS Servers</strong> Company</h2>
-									<p class="lead" data-animation="animated fadeInLeft">1 IP included with each server (more on request to justification)
-										Your Choice of any OS (CentOS, Windows, Debian, Fedora)
-										FREE Reboots</p>
+									<h2 data-animation="animated zoomInRight">Best <strong>Features</strong></h2>
+									<p class="lead" data-animation="animated fadeInLeft">Tersedia 3 Paket Gratis Yang Bisa Anda Pilih Sesuai Kebutuhan, Masing-masing Paket Diberikan Unlimited Bandwidth Dan Uptime Server 99%</p>
 									 <a data-scroll href="#pricing" class="btn btn-light btn-radius btn-brd effect-1 slide-btn" data-animation="animated fadeInLeft">View Plans</a>
 									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 									<a data-scroll href="#overviews" class="btn btn-light btn-radius btn-brd effect-1 slide-btn" data-animation="animated fadeInRight">All Features</a>
@@ -189,14 +187,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="message-box">
-                        <h4>2017 BEST WEB HOSTING COMPANY</h4>
-                        <h2>Awards Winner Support Center</h2>
-                        <p class="lead">Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
-
-                        <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis montes, nascetur ridiculus mus. Sed vitae rutrum neque. </p>
-
-                        <a href="#services" data-scroll class="btn btn-light btn-radius btn-brd grd1 effect-1">Learn More</a>
-                    </div><!-- end messagebox -->
+                        </div><!-- end messagebox -->
                 </div><!-- end col -->
 				
 				<div class="col-md-6">
