--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <div class="section-title row text-center">
                 <div class="col-md-8 col-md-offset-2">
                     <h3>About</h3>
-                    <p class="lead">Lorem Ipsum dolroin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem!</p>
+                    <p class="lead">AR05 Hosting Merupakan Penyedia Hosting Gratis Yang Berdiri Pada Tahun 2021. AR05 Hosting Menawarkan Hosting Dengan Fitur-fitur Lengkap Dan Memberikan Keamanan Pada Setiap Pelanggannya. Kami Berusaha Membantu Para Blogger Yang Ingin Mengembangkan Websitenya Secara Gratis Dengan Memberikan Hosting Gratis</p>
                 </div>
             </div><!-- end title -->
         
@@ -205,23 +205,23 @@
                     <div class="icon-wrapper wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
                         <i class="flaticon-server global-radius effect-1 alignleft"></i>
                         <h3>Unlimited Bandwidth</h3>
-                        <p>Our Landigoo responsive site template elements 100% compatible with all mobile devices and modern browsers! <small class="readmore"><a href="#">Read more</a></small></p>
+                        <p>AR05 Hosting Memberikan Unlimited Bandwidth Di Semua Paket Hosting, Agar Mencukupi Kebutuhan Para Pelanggan<small class="readmore"><a href="#">Read more</a></small></p>
                     </div><!-- end icon-wrapper -->
                 </div><!-- end col -->
 
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="icon-wrapper wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
                         <i class="flaticon-cloud-computing-1 global-radius effect-1 alignleft"></i>
-                        <h3>Unlimited Traffic</h3>
-                        <p>When you need anything about for Landigoo template, just drop an email or leave a feedback from TF!<small class="readmore"><a href="#">Read more</a></small></p>
+                        <h3>Addons Domain</h3>
+                        <p>Kami Menyediakan Fitur Addons Domain Diseluruh Paket Hosting, Agar Memudahkan Pengelolaan Domain Dalam Satu Hosting<small class="readmore"><a href="#">Read more</a></small></p>
                     </div><!-- end icon-wrapper -->
                 </div><!-- end col -->
 
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="icon-wrapper wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
                         <i class="flaticon-world-wide-web global-radius effect-1 alignleft"></i>
-                        <h3>1 Domain Free</h3>
-                        <p>We offer pixel perfect icons, graphic sources for high-resolution devices! Landigoo compatible retina display! <small class="readmore"><a href="#">Read more</a></small></p>
+                        <h3>Softaculous</h3>
+                        <p>Kami Menyediakan Auto Installer CMS Yang Dapat Anda Gunakan Untuk Menginstal WordPress, Joomla, Dan Lainnya<small class="readmore"><a href="#">Read more</a></small></p>
                     </div><!-- end icon-wrapper -->
                 </div><!-- end col -->
             </div><!-- end row -->
@@ -232,16 +232,16 @@
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="icon-wrapper wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
                         <i class="flaticon-cup global-radius effect-1 alignleft"></i>
-                        <h3>Awards Winner Support</h3>
-                        <p>Our Landigoo responsive site template elements 100% compatible with all mobile devices and modern browsers! <small class="readmore"><a href="#">Read more</a></small></p>
+                        <h3>Best Support</h3>
+                        <p>Layanan Kami Dilengkapi Dengan Tickets Support Yang Bisa Dihubungi Kapan Saja Saat Ada Masalah Tentang Hosting<small class="readmore"><a href="#">Read more</a></small></p>
                     </div><!-- end icon-wrapper -->
                 </div><!-- end col -->
 
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="icon-wrapper wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
                         <i class="flaticon-cer-file-format global-radius effect-1 alignleft"></i>
-                        <h3>Free SSL Certifica</h3>
-                        <p>We offer pixel perfect icons, graphic sources for high-resolution devices! Landigoo compatible retina display! <small class="readmore"><a href="#">Read more</a></small></p>
+                        <h3>Free SSL Certificate</h3>
+                        <p>Anda Bisa Menambahkan SSL Secara Manual Di Semua Paket Hosting, Yang Membuat Website Anda Menjadi Lebih Profesional<small class="readmore"><a href="#">Read more</a></small></p>
                     </div><!-- end icon-wrapper -->
                 </div><!-- end col -->
 
@@ -249,7 +249,7 @@
                     <div class="icon-wrapper wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
                         <i class="flaticon-locked global-radius effect-1 alignleft"></i>
                         <h3>High Security</h3>
-                        <p>When you need anything about for Landigoo template, just drop an email or leave a feedback from TF!<small class="readmore"><a href="#">Read more</a></small></p>
+                        <p>Kami Memberikan Pelayanan Dan Keamanan Kepada Seluruh Pelanggan Secara Gratis<small class="readmore"><a href="#">Read more</a></small></p>
                     </div><!-- end icon-wrapper -->
                 </div><!-- end col -->
             </div><!-- end row -->
@@ -261,11 +261,11 @@
             <div class="row text-center">
                 <div class="col-md-5 col-sm-12">
                     <div class="customwidget text-left">
-                        <h1>Find Your Domain</h1>
-                        <p>With our awesome domain name search form, you can search any domain names with tons of extensions.</p>
+                        <h1>Cari Domain</h1>
+                        <p>Beli Dan Dapatkan Domain Dengan Harga Murah Disini (Layanan Ini Belum Tersedia)</p>
                         <ul class="list-inline">
-                            <li><i class="fa fa-check"></i> 20k Domains Sold in 2017</li>
-                            <li><i class="fa fa-check"></i> 4k Website Created</li>
+                            <li><i class="fa fa-check"></i> 0 Domain Terdaftar</li>
+                            <li><i class="fa fa-check"></i> 450 Hosting Dibuat</li>
                         </ul>
                         <!-- end list -->
                         <a href="#hosting" data-scroll class="btn btn-light grd1 effect-1 btn-radius btn-brd">Hosting Packages</a>
