--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 <!-- end col -->
 
                 <div class="col-md-7">
-                    <form class="checkdomain form-inline">
+                    <form action="//order2.rumahweb.com" class="checkdomain form-inline">
                         <div class="checkdomain-wrapper">
                             <div class="form-group">
                                 <label class="sr-only" for="domainnamehere">Domain name</label>
