--- a/x.html
+++ b/x.html
@@ -1,1 +1,1 @@
-<iframe frameborder="0" height="980" width="100%" scrolling="yes" src="//ar05.eu.org/register/index.html"></iframe>
+<iframe frameborder="0" height="980" width="100%" scrolling="yes" src="//ar05.eu.org/register/small.html"></iframe>
