--- a/x.html
+++ b/x.html
@@ -1,1 +1,2 @@
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <iframe frameborder="0" height="980" width="100%" scrolling="yes" src="https://ar05.eu.org/register/"></iframe>
